2005-12-17  Tor Lillqvist  <tml@novell.com>

	* Makefile.am (INCLUDES): Don't need EXTRA_GNOME_CFLAGS or
	GNOME_FULL_CFLAGS.

	* e-error.c
	* e-fsutils.c: Use gstdio wrappers. Use GDir instead of dirent.

	* e-error.c
	* e-folder-map.c: Use e_xml_parse_file() instead of using libxml
	directly.

	* e-util-private.h (fsync)
	* e-util.c: Don't bother with a Win32 implementation of fsync() as
	the uses of fsync() in evo are pretty irrelevant. Just #define
	fsync() away on Win32.

2005-12-12  Irene Huang <Irene.Huang@sun.com>

	reviewed by: Veerapuram Varadhan  <vvaradhan@novell.com>
	
	* Makefile.am: Remove files that have an identical counterpart in
	libedataserver, e-list.[c|h], e-list-iterator.[c|h], e-iconv.[c|h]
	e-component-listener.[c|h], md5-utils.[c|h], e-time-utils.[c|h],
	e-uid.[c|h]. Change md5-utils.h to e-html-utils.h in pilot-compile.
	* e-component-listener.c:
	* e-component-listener.h: 
	* e-iterator.c:
	* e-iterator.h:
	* e-time-utils.c:
	* e-time-utils.h:
	* e-iconv.c:
	* e-iconv.h:
	* e-uid.c:
	* e-uid.h:
	* md5-utils.c:
	* md5-utils.h:
	* e-list-iterator.h:
	* e-list-iterator.c:
	* e-list.h:
	* e-list.c: 
	Removed
	* e-account-list.h:
	* e-account.c:
	* e-signature-list.c:
	* e-signature.c:
	* e-signature-list.h: Change inclusion of <e-util/e-list.h>
	to <libedataserver/e-list.h>. Change inclusion of "e-uid.h" and
	"e-list.h" to <libedataserver/e-uid.h> and <libedataserver/e-list.h>.

2005-12-09  Harish Krishnaswamy  <kharish@novell.com>

	* e-util.[ch] (e_str_compare), (e_str_case_compare),
	(e_collate_compare), (e_int_compare): prefix the wrapper 
	functions with e - do not use g lest it is assumed to 
	be a glib function.

2005-11-26  Tor Lillqvist  <tml@novell.com>

	* e-dialog-utils.c
	* e-gtk-utils.c: Conditionalize X11 specific code on GDK_WINDOWING_X11.

	* e-menu.c (emph_construct_menu): Use g_get_tmp_dir() instead of
	hardcoding /tmp.

	* e-util.c (e_strstrcase): Use g_ascii_strncasecmp() instead of